[tool.poetry]
name = "mojo-landscaping"
description = "Automation Mojo Landscaping Package"
version = "2.0.2"
authors = ["Myron W Walker"]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mojo-config = ">=2.0.0 <2.1.0"
mojo-credentials = ">=2.0.0 <2.1.0"
mojo-interfaces = ">=2.0.0 <2.1.0"
mojo-extension = ">=2.0.0 <2.1.0"
mojo-xmodules = ">=2.0.0 <2.1.0"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
